topnav menu style

--- a/ethnode/webdoc/topnav.html
+++ b/ethnode/webdoc/topnav.html
@@ -1,27 +1,28 @@
-<div class="outer-content">
+<div class="outer-content-topnav">
      <div class="float_left">
          <div style="margin-left:10px" class="topnav-button"> ETHEARNAL v0.0.1</div>
      </div>
-    <div class="inner-content-topnav">
 
-        <div class="float_right">
+</div>
+<div class="inner-content-topnav ">
 
+    <!--div class="debug" -->
 
-            <div class="top_nav_menu_group">
-                <a class="topnav" href="#">PROFILES</a>
-            </div>
-
-            <div class="top_nav_menu_group">
-                <a class="topnav" href="#">BUY</a>
-                <a class="topnav" href="#">SELL</a>
-                <a class="topnav-button" href="#">POST JOB</a>
-            </div>
-
-            <div class="top_nav_menu_group">
-                <a class="topnav" href="#">ME</a>
-            </div>
+        <div class="top_nav_menu_group">
+            <a class="topnav" href="#">PEERS</a>
+            <a class="topnav" href="#">PROFILES</a>
         </div>
-    </div>
+
+        <div class="top_nav_menu_group">
+            <a class="topnav" href="#">BUY</a>
+            <a class="topnav" href="#">SELL</a>
+            <a class="topnav-button" href="#">POST JOB</a>
+        </div>
+
+        <div class="top_nav_menu_group">
+            <a class="topnav" href="#">ME</a>
+        </div>
+    <!-- /div -->
 </div>
 
 
