main content styling

--- a/ethnode/webdoc/topnav.html
+++ b/ethnode/webdoc/topnav.html
@@ -1,6 +1,6 @@
 <div class="outer-content-topnav">
      <div class="float_left">
-         <div style="margin-left:10px" class="topnav-button"> ETHEARNAL v0.0.1</div>
+         <div style="margin-left:10px" class="topnav-button font_khand"> ETHEARNAL v0.0.1</div>
      </div>
 
 </div>
