--- a/ethnode/webdoc/index.html
+++ b/ethnode/webdoc/index.html
@@ -10,6 +10,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Khand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <script src="layoutjs/layout.js"></script>
 </head>
@@ -17,7 +18,7 @@
 <div class="header" id="topnav">
 </div>
 <div class="outer-content">
-    <div class="inner-content box_shadow font">
+    <div id="main-content" class="inner-content box_shadow font font_light color_gray">
         Content
     </div>
 </div>
@@ -25,6 +26,7 @@
   l = new Layoutjs();
   i = l.bind(l.include,l);
   i('GET','topnav.html',null,'topnav',true);
+  i('GET','about.html',null,'main-content',true);
 
 </script>
 </body>
