main single page ajax app

--- a/ethnode/webdoc/about.html
+++ b/ethnode/webdoc/about.html
@@ -1,12 +1,12 @@
 <h1 class="font_khand">About</h1>
-<p>Ethearnal key features</p>
+<p>Ethearnal key features:</p>
 
-<ul>
-    <li>PEAR TO PEAR WEB 3.0</li>
-    <li>DECENTRALIZED PROFESSIONAL NETWORK</li>
-    <li>SMART ELECTRONIC CONTRACTS</li>
-    <li>BLOCKCHAIN TECHNOLOGY</li>
-    <li>VALUE OF TRUST</li>
+<ul style="list-style-type: square;">
+    <li>Pear to pear web 3.0.</li>
+    <li>Decentralized professional network.</li>
+    <li>Smart contracts.</li>
+    <li>Block-chain technology.</li>
+    <li>Business value of trust</li>
 </ul>
 
 
