--- a/ethnode/webdoc/topnav.html
+++ b/ethnode/webdoc/topnav.html
@@ -1,28 +1,27 @@
 <div class="outer-content-topnav">
-     <div class="float_left">
-         <div style="margin-left:10px" class="topnav-button font_khand"> ETHEARNAL v0.0.1</div>
-     </div>
-
+    <div class="float_left">
+        <div style="margin-left:10px; margin-top:10px;" class="topnav-button font_khand">
+            <a class="topnav-button" href="javascript:on_click('about.html');"> ETHEARNAL v0.0.1 </a>
+        </div>
+    </div>
 </div>
 <div class="inner-content-topnav ">
+    <div class="top_nav_menu_group">
+        <a class="topnav" href="javascript:on_click('peers.html');">PEERS</a>
+        <a class="topnav" href="javascript:on_click('profiles.html');">PROFILES</a>
+    </div>
+    <div class="top_nav_menu_group">
+        <a class="topnav" href="javascript:on_click('buy.html');">BUY</a>
+        <a class="topnav" href="javascript:on_click('sell.html');">SELL</a>
+        <a class="topnav-button" href="javascript:on_click('post_job.html');">POST JOB</a>
+    </div>
 
-    <!--div class="debug" -->
+    <div class="top_nav_menu_group">
+        <a class="topnav" href="javascript:on_click('me.html');">ME</a>
+    </div>
+    <script>
 
-        <div class="top_nav_menu_group">
-            <a class="topnav" href="#">PEERS</a>
-            <a class="topnav" href="#">PROFILES</a>
-        </div>
-
-        <div class="top_nav_menu_group">
-            <a class="topnav" href="#">BUY</a>
-            <a class="topnav" href="#">SELL</a>
-            <a class="topnav-button" href="#">POST JOB</a>
-        </div>
-
-        <div class="top_nav_menu_group">
-            <a class="topnav" href="#">ME</a>
-        </div>
-    <!-- /div -->
+    </script>
 </div>
 
 
