--- a/ethnode/webdoc/index.html
+++ b/ethnode/webdoc/index.html
@@ -2,6 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Ethearnal p2p</title>
     <link rel="stylesheet" type="text/css" href="index.css">
@@ -11,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Khand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
 
     <script src="layoutjs/layout.js"></script>
 </head>
