--- a/ethnode/webdoc/topnav.html
+++ b/ethnode/webdoc/topnav.html
@@ -7,7 +7,7 @@
 </div>
 <div class="inner-content-topnav ">
     <div class="top_nav_menu_group">
-        <a class="topnav" href="javascript:on_click('peers.html');">PEERS</a>
+        <a class="topnav" href="javascript:on_click_js('peers.html','peers.js');">PEERS</a>
         <a class="topnav" href="javascript:on_click('profiles.html');">PROFILES</a>
     </div>
     <div class="top_nav_menu_group">
