--- a/ethnode/webdoc/index.html
+++ b/ethnode/webdoc/index.html
@@ -41,6 +41,12 @@
     i('GET',html_to, js_to, 'main-content',true);
   };
 
+  /* global ethapp object */
+  var ethapp = {'my':{}};
+
+  console.log(ethapp);
+
+
 
 </script>
 </body>
