--- a/ethnode/webdoc/topnav.html
+++ b/ethnode/webdoc/topnav.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="top_nav_menu_group">
-        <a class="topnav" href="javascript:on_click('me.html');">ME</a>
+        <a class="topnav" href="javascript:on_click_js('me.html','me.js');">ME</a>
     </div>
     <script>
 
