--- a/ethnode/webdoc/me.html
+++ b/ethnode/webdoc/me.html
@@ -1,2 +1,53 @@
-<h1 class="font_khand">My profile</h1>
-<p>Self info</p>
+<div class="box_shadow_b" style="min-height:400px; padding: 10px;">
+   <div class="float_left box_shadow_a air_inside w99">
+    <div class="avatar float_left"></div>
+     <h1 class="font_khand" style="margin-bottom:0px;">My profile</h1>
+     <br>
+        <div class="float_left bold">Guid:&nbsp;</div>
+        <div class="float_left">2503849c3f3563c5758921fb3e19d8a0e59a127b9cffeddea487197887bc0cc1</div><br>
+        <div class="float_left bold">Name:&nbsp;</div>
+        <div class="float_left">Dobri S. ( hardc0d3 )</div>
+        <br>
+        <br>
+    </div>
+    <div class="float_left w99" style="height: 6px;"></div>
+        <div class="float_left box_shadow_a air_inside w99">
+            <div class="float_left bold">Skills:&nbsp;</div>
+                <br>
+                <br>
+
+                <a class="skill_box" href="#">Python</a>
+                <a class="skill_box" href="#">Hacking</a>
+                <a class="skill_box" href="#">Javascript</a>
+                <a class="skill_box" href="#">Html</a>
+                <a class="skill_box" href="#">Web</a>
+                <a class="skill_box" href="#">Django</a>
+                <a class="skill_box" href="#">REST API</a>
+                <a class="skill_box" href="#">Networking</a>
+                <a class="skill_box" href="#">Agile</a>
+                <a class="skill_box" href="#">Management</a>
+                <a class="skill_box" href="#">Integration</a>
+                <a class="skill_box" href="#">Linux</a>
+        </div>
+        <div class="float_left w99" style="height: 6px;"></div>
+        <div class="resume_box float_left box_shadow_a air_inside w99">
+            <div class="bold">Resume:&nbsp;</div>
+            <p>
+                Writing python based software solutions, custom real-time search engines,
+                 management tools for satellite image processing software with large scale data. 
+
+            </p>
+            <p>
+                From ancient time symbol tables are used in daily 
+                life in societies creating meaning of existence. 
+                Every minute a thousand of millions characters 
+                are acting in world scene making it the most complex system. 
+                Almost everything and nothing is language.
+                 Text is a just an instrument of it. - Doby
+            </p>
+   
+        </div>
+      
+
+
+</div>
