--- a/ethnode/webdoc/topnav.html
+++ b/ethnode/webdoc/topnav.html
@@ -1,23 +1,23 @@
 <div class="outer-content-topnav">
     <div class="float_left">
         <div style="margin-left:10px; margin-top:10px;" class="topnav-button font_khand">
-            <a class="topnav-button" href="javascript:on_click('about.html');"> ETHEARNAL v0.0.1 </a>
+            <a class="topnav-button" href="javascript:ethevt.topnav.on_click('about.html');"> ETHEARNAL v0.0.1 </a>
         </div>
     </div>
 </div>
 <div class="inner-content-topnav ">
     <div class="top_nav_menu_group">
-        <a class="topnav" href="javascript:on_click_js('peers.html','peers.js');">PEERS</a>
-        <a class="topnav" href="javascript:on_click('profiles.html');">PROFILES</a>
+        <a class="topnav" href="javascript:ethevt.topnav.on_click_js('peers.html','peers.js');">PEERS</a>
+        <a class="topnav" href="javascript:ethevt.topnav.on_click('profiles.html');">PROFILES</a>
     </div>
     <div class="top_nav_menu_group">
-        <a class="topnav" href="javascript:on_click('buy.html');">BUY</a>
-        <a class="topnav" href="javascript:on_click('sell.html');">SELL</a>
-        <a class="topnav-button" href="javascript:on_click('post_job.html');">POST JOB</a>
+        <a class="topnav" href="javascript:ethevt.topnav.on_click('buy.html');">BUY</a>
+        <a class="topnav" href="javascript:ethevt.topnav.on_click('sell.html');">SELL</a>
+        <a class="topnav-button" href="javascript:ethevt.topnav.on_click('post_job.html');">POST JOB</a>
     </div>
 
     <div class="top_nav_menu_group">
-        <a class="topnav" href="javascript:on_click_js('me.html','me.js');">ME</a>
+        <a class="topnav" href="javascript:ethevt.topnav.on_click_js('me.html','me.js');">ME</a>
     </div>
     <script>
 
