--- a/ethnode/webdoc/me.html
+++ b/ethnode/webdoc/me.html
@@ -4,9 +4,9 @@
      <h1 class="font_khand" style="margin-bottom:0px;">My profile</h1>
      <br>
         <div class="float_left bold">Guid:&nbsp;</div>
-        <div class="float_left">2503849c3f3563c5758921fb3e19d8a0e59a127b9cffeddea487197887bc0cc1</div><br>
+        <div class="float_left" id="ethdata.my.guid"></div><br>
         <div class="float_left bold">Name:&nbsp;</div>
-        <div class="float_left">Dobri S. ( hardc0d3 )</div>
+        <div class="float_left" id="ethdata.my.first_last_nick">Dobri S. ( hardc0d3 )</div>
         <br>
         <br>
     </div>
@@ -15,26 +15,13 @@
             
             <div class="float_left bold">Skills:&nbsp;</div>
             <br><br>
-            <div id="skill_component"></div>
+            <div id="ethdata.my.render_skills_html"></div>
             <!--skill component-->
         </div>
         <div class="float_left w99" style="height: 6px;"></div>
         <div class="resume_box float_left box_shadow_a air_inside w99">
             <div class="bold">Resume:&nbsp;</div>
-            <p>
-                Writing python based software solutions, custom real-time search engines,
-                 management tools for satellite image processing software with large scale data. 
-
-            </p>
-            <p>
-                From ancient time symbol tables are used in daily 
-                life in societies creating meaning of existence. 
-                Every minute a thousand of millions characters 
-                are acting in world scene making it the most complex system. 
-                Almost everything and nothing is language.
-                 Text is a just an instrument of it. - Doby
-            </p>
-   
+            <div class="float_left w99" id="ethdata.my.html_resume"></div>
         </div>
       
 
