--- a/ethnode/webdoc/me.html
+++ b/ethnode/webdoc/me.html
@@ -21,9 +21,12 @@
         <div class="float_left w99" style="height: 6px;"></div>
         <div class="resume_box float_left box_shadow_a air_inside w99">
             <div class="bold">Resume:&nbsp;</div>
+             <div class="float_left w99" style="height: 6px;"></div>
+
+
             <div class="float_left w99" id="ethdata.my.html_resume"></div>
         </div>
+      <div class="float_left w99" style="height: 8px;"></div>
       
-
 
 </div>
