re-style template post job

--- a/ethnode/webdoc/buy.html
+++ b/ethnode/webdoc/buy.html
@@ -1,2 +1,17 @@
 <h1 class="font_khand">Buy</h1>
 <p>Offers</p>
+<style>
+    .air2 {
+        background-color: pink; 
+        padding-left:10px;
+        position: relative;
+    }
+    .insider {
+        background-color: orange;
+        margin-right: 12px;
+
+    }
+</style>
+<div class="air2">
+    <div class='insider'>sdfad </div>
+</div>
