--- a/ethnode/webdoc/me.html
+++ b/ethnode/webdoc/me.html
@@ -1,12 +1,54 @@
-<div class="box_shadow_b" style="min-height:400px; padding: 10px;">
+
+<h1 class="font_khand" style="margin-bottom:0px; margin-top:0px;"> My Profile</h1>
+<div class="float_left" style="color: #d6d6d6; font-weight: light;" id="ethdata.my.guid"></div>
+<div class="float_left w99" style="height: 3px;"></div>
+<div class="float_left box_shadow_a air_inside" style="width: 99%;">
+    <div class="avatar float_left"></div>
+    <div class="float-left" style="margin-left: 81px;">
+        <div class="float_left">
+               <div class="float_left label_kern" style="margin-top:5px;">FIRST&nbsp;</div>
+               <textarea spellcheck="false" id="ethdata.my.first" style="width: 130px;" class="input_box" rows="1" cols="30"></textarea>
+        </div>
+
+        <div class="float_left">
+             <div class="float_left label_kern" style="margin-top:5px;">&nbsp;LAST&nbsp;</div>
+             <textarea  spellcheck="false" id="ethdata.my.last" style="width: 130px;" class="input_box" rows="1" cols="30"></textarea>
+        </div>
+
+        <div class="float_left">
+             <div class="float_left label_kern" style="margin-top:5px;">&nbsp;NICK&nbsp;</div>
+             <textarea spellcheck="false" id="ethdata.my.nick" style="width: 130px;" class="input_box" rows="1" cols="30"></textarea>
+        </div>
+
+    </div>
+
+    <div class="float_left">
+           <div class="float_left w99" style="height: 8px;"></div>
+           <div class="float_left label_kern" style="margin-top:5px;">TITLE&nbsp;</div>
+           <textarea spellcheck="false" id="ethdata.my.title"  style="width: 500px;" class="input_box" rows="1" cols="30"></textarea>
+    </div>
+</div>
+<div class="float_left label_kern" style="margin:5px;">SKILLS&nbsp;</div>
+<div class="float_left box_shadow_a air_inside" style="width: 99%;">
+    <div id="ethdata.my.render_skills_html"></div>
+</div>
+<div class="float_left label_kern" style="margin:5px;">ABOUT ME&nbsp;</div>
+<div class="float_left box_shadow_a air_inside" style="width: 99%;">
+   <div class="float_left w99" id="ethdata.my.html_resume"></div>
+</div>
+<div class="float_left label_kern" style="margin:5px;">&nbsp;</div>
+
+
+
+<!--div class="box_shadow_b" style="min-height:400px; padding: 10px;">
     <div class="float_left box_shadow_a air_inside w99">
         <div class="avatar float_left"></div>
         <h1 class="font_khand" style="margin-bottom:0px;">My profile</h1>
         <br>
-        <div class="float_left bold">Guid:&nbsp;</div>
+        <div class="float_left label_kern">GUID:&nbsp;</div>
         <div class="float_left" id="ethdata.my.guid"></div>
         <br>
-        <div class="float_left bold">Name:&nbsp;</div>
+        <div class="float_left label_kern">NAME:&nbsp;</div>
         <div class="float_left" id="ethdata.my.first_last_nick">Dobri S. ( hardc0d3 )</div>
         <br>
         <br>
@@ -14,11 +56,11 @@
     <div class="float_left w99" style="height: 6px;"></div>
     <div class="float_left box_shadow_a air_inside w99">
 
-        <div class="float_left bold">Skills:&nbsp;</div>
+        <div class="float_left label_kern">SKILLS:&nbsp;</div>
         <br><br>
-        <div id="ethdata.my.render_skills_html"></div>
+        <div id="ethdata.my.render_skills_html"></div-->
         <!--skill component-->
-    </div>
+    <!--/div>
     <div class="float_left w99" style="height: 6px;"></div>
     <div class="resume_box float_left box_shadow_a air_inside w99">
         <div class="bold">Resume:&nbsp;</div>
@@ -28,4 +70,4 @@
         <div class="float_left w99" id="ethdata.my.html_resume"></div>
     </div>
     <div class="float_left w99" style="height: 8px;"></div>
-</div>
+</div-->
