--- a/ethnode/webdoc/peers.html
+++ b/ethnode/webdoc/peers.html
@@ -1,7 +1,4 @@
-<div class="box_shadow_b" style="max-width: 1000px; min-height:400px; padding: 10px;">
-    <div class="float_left box_shadow_a air_inside w99">
-        <h1 class="font_khand" style="margin-bottom:0px;">Peers</h1>
-        <div class="float_left w99" style="height: 8px;"></div>
-        <div id="mynetwork"></div>
-    </div>  
- </div>
+<h1 class="font_khand" style="margin-bottom:0px; margin-top:0px;"> Peers </h1>
+<div class="float_left box_shadow_a air_inside" style="width: 99%;">
+    <div id="mynetwork"></div>
+</div>
