--- a/ethnode/webdoc/post_job.html
+++ b/ethnode/webdoc/post_job.html
@@ -1,16 +1,15 @@
+<h1 class="font_khand" style="margin-bottom:0px; margin-top:0px;"> Get your Job Done! </h1>
 
-    <h1 class="font_khand" style="margin-bottom:0px; margin-top:0px;"> Get your Job Done! </h1>
+<div class="float_left box_shadow_a air_inside" style="width: 99%;">
+    <div class="float_left label_kern">WHAT DO YOU NEED TO GET DONE?</div>
+    <div class="float_left w99" style="height: 6px;"></div>
+    <textarea style="width: 98%" class="input_box" rows="1" cols="100">e.g. I need front-end developer.</textarea>
+</div>
 
-    <div class="float_left box_shadow_a air_inside" style="width: 99%;">
-        <div class="float_left label_kern">WHAT DO YOU NEED TO GET DONE?</div>
-        <div class="float_left w99" style="height: 6px;"></div>
-        <textarea style="width: 98%" class="input_box" rows="1" cols="100">e.g. I need front-end developer.</textarea>
-    </div>
+<div class="float_left w99" style="height: 12px;">asd</div>
 
-    <div class="float_left w99" style="height: 8px;"></div>
-
-    <div class="float_left box_shadow_a air_inside" style="width: 99%;">
-        <div class="float_left label_kern">DESCRIPTION</div>
-        <div class="float_left" style="height: 6px;"></div>
-        <textarea style="width: 98%;" class="input_box" rows="4" cols="100">Get better proposal by providing detailed description.</textarea>
-    </div>
+<div class="float_left box_shadow_a air_inside" style="width: 99%;">
+    <div class="float_left label_kern">DESCRIPTION</div>
+    <div class="float_left" style="height: 6px;"></div>
+    <textarea style="width: 98%;" class="input_box" rows="4" cols="100">Get better proposal by providing detailed description.</textarea>
+</div>
