--- a/ethnode/webdoc/profiles.html
+++ b/ethnode/webdoc/profiles.html
@@ -1,2 +1,4 @@
-<h1 class="font_khand">Profiles</h1>
-<p>Search people</p>
+<h1 class="font_khand" style="margin-bottom:0px; margin-top:0px;"> Profiles </h1>
+<div class="float_left box_shadow_a air_inside" style="width: 99%;">
+    Search people
+</div>
