--- a/ethnode/webdoc/sell.html
+++ b/ethnode/webdoc/sell.html
@@ -1,2 +1,4 @@
-<h1 class="font_khand">Sell</h1>
-<p>Find jobs</p>
+<h1 class="font_khand" style="margin-bottom:0px; margin-top:0px;"> Sell </h1>
+    <div class="float_left box_shadow_a air_inside" style="width: 99%;">
+        Find jobs
+    </div>
