--- a/ethnode/webdoc/buy.html
+++ b/ethnode/webdoc/buy.html
@@ -1,17 +1,4 @@
-<h1 class="font_khand">Buy</h1>
-<p>Offers</p>
-<style>
-    .air2 {
-        background-color: pink; 
-        padding-left:10px;
-        position: relative;
-    }
-    .insider {
-        background-color: orange;
-        margin-right: 12px;
-
-    }
-</style>
-<div class="air2">
-    <div class='insider'>sdfad </div>
+<h1 class="font_khand" style="margin-bottom:0px; margin-top:0px;"> Buy </h1>
+<div class="float_left box_shadow_a air_inside" style="width: 99%;">
+    Find offerings
 </div>
