--- a/ethnode/webdoc/me.html
+++ b/ethnode/webdoc/me.html
@@ -38,36 +38,10 @@
 </div>
 <div class="float_left label_kern" style="margin:5px;">&nbsp;</div>
 
+<div class="float_left w99" style="height: 24px;"></div>
 
+<div class="float_right">
+     <a class="topnav-button" href="javascript:console.log('UPDATE PROFILE');">UPDATE</a>
+</div>
 
-<!--div class="box_shadow_b" style="min-height:400px; padding: 10px;">
-    <div class="float_left box_shadow_a air_inside w99">
-        <div class="avatar float_left"></div>
-        <h1 class="font_khand" style="margin-bottom:0px;">My profile</h1>
-        <br>
-        <div class="float_left label_kern">GUID:&nbsp;</div>
-        <div class="float_left" id="ethdata.my.guid"></div>
-        <br>
-        <div class="float_left label_kern">NAME:&nbsp;</div>
-        <div class="float_left" id="ethdata.my.first_last_nick">Dobri S. ( hardc0d3 )</div>
-        <br>
-        <br>
-    </div>
-    <div class="float_left w99" style="height: 6px;"></div>
-    <div class="float_left box_shadow_a air_inside w99">
-
-        <div class="float_left label_kern">SKILLS:&nbsp;</div>
-        <br><br>
-        <div id="ethdata.my.render_skills_html"></div-->
-        <!--skill component-->
-    <!--/div>
-    <div class="float_left w99" style="height: 6px;"></div>
-    <div class="resume_box float_left box_shadow_a air_inside w99">
-        <div class="bold">Resume:&nbsp;</div>
-        <div class="float_left w99" style="height: 6px;"></div>
-
-
-        <div class="float_left w99" id="ethdata.my.html_resume"></div>
-    </div>
-    <div class="float_left w99" style="height: 8px;"></div>
-</div-->
+<div class="float_left w99" style="height: 14px;"></div>
