--- a/ethnode/webdoc/post_job.html
+++ b/ethnode/webdoc/post_job.html
@@ -6,10 +6,14 @@
     <textarea style="width: 98%" class="input_box" rows="1" cols="100">e.g. I need front-end developer.</textarea>
 </div>
 
-<div class="float_left w99" style="height: 12px;">asd</div>
+<div class="float_left w99" style="height: 12px;"></div>
 
 <div class="float_left box_shadow_a air_inside" style="width: 99%;">
     <div class="float_left label_kern">DESCRIPTION</div>
     <div class="float_left" style="height: 6px;"></div>
-    <textarea style="width: 98%;" class="input_box" rows="4" cols="100">Get better proposal by providing detailed description.</textarea>
+    <textarea style="width: 98%;" class="input_box" rows="8" cols="100">Get better proposal by providing detailed description.</textarea>
+</div>
+<div class="float_left w99" style="height: 34px;"></div>
+<div class="float_right">
+     <a class="topnav-button" href="javascript:ethevt.post_job.on_click_post('ok post job goes here');">POST</a>
 </div>
