--- a/ethnode/webdoc/topnav.html
+++ b/ethnode/webdoc/topnav.html
@@ -13,7 +13,7 @@
     <div class="top_nav_menu_group">
         <a class="topnav" href="javascript:ethevt.topnav.on_click('buy.html');">BUY</a>
         <a class="topnav" href="javascript:ethevt.topnav.on_click('sell.html');">SELL</a>
-        <a class="topnav-button" href="javascript:ethevt.topnav.on_click('post_job.html');">POST JOB</a>
+        <a class="topnav-button" href="javascript:ethevt.topnav.on_click_js('post_job.html','post_job.js');">POST JOB</a>
     </div>
 
     <div class="top_nav_menu_group">
